# NesEmuAndroid

./: README.md  build.gradle.kts  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/onandor/nesemu/: ExampleInstrumentedTest.kt  GameScreenTest.kt  (+1 more)
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: audio-player.cpp  audio-player.hpp  audio_player.cpp  audio_player.h  jni_bridge.cpp  jni_bridge.h  logging.h
app/src/main/proto/: Preferences.proto
app/src/main/res/drawable/: ic_controller.xml  ic_controller_button_a.xml  ic_controller_button_b.xml  ic_controller_button_menu.xml  ic_controller_button_view.xml  ic_controller_button_x.xml  ic_controller_button_y.xml  ic_controller_lb.xml  ic_controller_lt.xml  ic_controller_rb.xml  ic_controller_rt.xml  ic_keyboard_0.xml  ic_keyboard_1.xml  ic_keyboard_2.xml  ic_keyboard_3.xml  ic_keyboard_4.xml  ic_keyboard_5.xml  ic_keyboard_6.xml  ic_keyboard_7.xml  ic_keyboard_8.xml  ic_keyboard_9.xml  ic_keyboard_a.xml  ic_keyboard_alt.xml  ic_keyboard_apostrophe.xml  ic_keyboard_arrow_down.xml  ic_keyboard_arrow_left.xml  ic_keyboard_arrow_right.xml  ic_keyboard_arrow_up.xml  ic_keyboard_b.xml  ic_keyboard_backspace.xml  ic_keyboard_bracket_close.xml  ic_keyboard_bracket_open.xml  ic_keyboard_c.xml  ic_keyboard_capslock.xml  ic_keyboard_comma.xml  ic_keyboard_ctrl.xml  ic_keyboard_d.xml  ic_keyboard_delete.xml  ic_keyboard_e.xml  ic_keyboard_end.xml  (+51 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/android/util/: Log.java
app/src/test/res/: .gitignore
(+244 files in other folders)
